# graphene-django-graphiql-static

./: CONTRIBUTING.rst  HISTORY.rst  README.rst  pyproject.toml  setup.cfg  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
graphene_django_graphiql_static/: views.py
graphene_django_graphiql_static/static/graphene_django_graphiql_static/: graphiql.min.css  graphiql.min.js
tests/: README.md
