# [wheel]
# universal = 1

# [flake8]
# ignore = D203
# exclude =
#     graphene_django_graphiql_static/migrations,
#     .git,
#     .tox,
#     docs/conf.py,
#     build,
#     dist
# max-line-length = 119

# [zest.releaser]
# python-file-with-version = graphene_django_graphiql_static/__init__.py


# [metadata]
# name = graphene-django-graphiql-static
# version = 0.1
# description = "Graphene-Django-GraphiQL-Static provides an offline-compatible GraphiQL web UI for Graphene-Django projects. It ensures uninterrupted GraphQL query exploration by serving all necessary assets locally, making it reliable even during internet outages."
# long_description = file: README.rst
# url = https://github.com/prashantz7242/graphene-django-graphiql-static/
# author = Prashant Patel
# author_email = prashantz7242@gmail.com
# license = BSD-3-Clause  # Example license
# classifiers =
#     Environment :: Web Environment
#     Framework :: Django
#     Framework :: Django :: 4.2
#     Intended Audience :: Developers
#     License :: OSI Approved :: BSD License
#     Operating System :: OS Independent
#     Programming Language :: Python
#     Programming Language :: Python :: 3
#     Programming Language :: Python :: 3 :: Only
#     Programming Language :: Python :: 3.8
#     Programming Language :: Python :: 3.9
#     Programming Language :: Python :: 3.10
#     Programming Language :: Python :: 3.11
#     Programming Language :: Python :: 3.12
#     Topic :: Internet :: WWW/HTTP
#     Topic :: Internet :: WWW/HTTP :: Dynamic Content

# [options]
# include_package_data = true
# packages = find:
# python_requires = >=3.8
# install_requires =
#     Django >= 4.2.4  # Replace "X.Y" as appropriate
#     graphene-django >= 3.1.5